# bop

./: .clang-format  .clangd  .gitattributes  .gitignore  .luarc.json  .roomodes  AGENTS.md  CLAUDE.md  CLAUDE0.md  CODEBASE_ANALYSIS.md  CONTENTION_ANALYSIS.md  Cargo.toml  GEMINI.md  GENERATOR_INTEGRATION_SUMMARY.md  PREEMPTION_IMPLEMENTATION.md  async_result.rs  bake  bake.bat  bake.lua  build.gradle.kts  cert.pem  check_output.txt  constitution.md  forge  forge.bat  forge.ps1  forge.py  heed_test_db-lock  llvm-config.sh  modify_tier2_tests.py  odinfmt.json  ols.json  out.txt  package-lock.json  pyproject.toml  reflectconfig.json  repos.lnk  run_test_uws.sh  rustc-ice-2025-12-06T15_14_22-770868.txt  rustc-ice-2025-12-06T15_14_37-770998.txt  (+12 more)
crates/bop-aof/: Cargo.toml
crates/bop-aof/benches/: aof_benchmarks.rs
crates/bop-aof/src/: aof.rs  config.rs  error.rs  flush.rs  fs.rs  improvements.md  lib.rs  manager.rs  reader.rs  segment.rs  test_support.rs
crates/bop-aof/tests/: README.md  aof2_failure_tests.rs  aof2_manifest_log.rs
crates/bop-executor/: COMPREHENSIVE_FINAL_SUMMARY.md  Cargo.toml  FINAL_TEST_STATUS.md  SIGNALING_ANALYSIS_SUMMARY.md  SIGNALING_QUICK_REFERENCE.md  TESTING_SUMMARY.md  TESTING_SUMMARY_EXTENDED.md  TESTING_SUMMARY_FINAL.md  TEST_FIXES_SUMMARY.md
crates/bop-executor/benches/: mpsc_local_sender.rs  signal_waker_perf.rs
crates/bop-executor/examples/: BENCHMARK_SUMMARY.md  active_summary_benchmark.rs  congee_benchmark.rs  event_mpmc_channel.rs  executor_fast_benchmark.rs  executor_main.rs  fast_worker_benchmark_multithread.rs  fast_worker_benchmark_simple.rs  fast_worker_blocking_benchmark.rs  hello_async.rs  minimal_async_integration.rs  mpmc_benchmark.rs  mpmc_timer_wheel_benchmark.rs  old_worker_benchmark.rs  raw_selection_benchmark.rs  runtime_multithread_bench.rs  signal_slot_async.rs  simple_async_example.rs  task_allocation_benchmark.rs  task_worker_bench.rs  task_worker_benchmark.rs  task_worker_benchmark_simple.rs  task_worker_benchmark_v2.rs  timer_example.rs  timer_tick.rs  timer_tick_async.rs  timer_wheel_benchmark.rs  timers_gc_benchmark.rs  working_async_example.rs
crates/bop-executor/macro/: Cargo.toml
crates/bop-executor/src/: async_task.rs  bits.rs  congee_timer.rs  deque.rs  executor.rs  fast_task_worker.rs  lib.rs  mpmc.rs  mpmc_timer_wheel.rs  mpsc.rs  mpsc_basic.rs  mpsc_dynamic.rs  mpsc_review.md  parking.rs  runtime.rs  seg_spmc.rs  seg_spsc.rs  seg_spsc_dynamic.rs  selector.rs  signal.rs  signal_scan.rs  signal_waker.rs  slot.rs  spsc_old.rs  summary_tree.rs  task.md  task.rs  timer.rs  timer_wheel.rs  timers.md  timers.plan.md  utils.rs  waker.rs  worker.plan.md  worker.rs  worker_message.rs  worker_service.rs
crates/bop-executor/tests/: SIGNALING_TEST_PLAN.md  comprehensive_executor_tests.rs  integration_runtime_tests.rs  mpsc_async_tests.rs  property_tests.rs  seg_spsc_async_tests.rs  signal_waker_bug_regression_tests.rs  signaling_tests.rs  summary_tree_tests.rs  testing.plan.md  timers.rs
crates/bop-mdbx/: Cargo.toml
crates/bop-mdbx/examples/: mdbx_dupfixed.rs  mdbx_example.rs  mdbx_scan.rs  sync_durable.rs
crates/bop-mdbx/src/: lib.rs
crates/bop-mpmc/: Cargo.toml  README.md
crates/bop-mpmc/benches/: close_functionality_bench.rs
crates/bop-mpmc/docs/: mpmc.md
crates/bop-mpmc/examples/: BENCHMARK_COMPARISON.md  MINIMAL_WORKSTEALING_MODIFICATION.md  WORK_STEALING_INTEGRATION_STRATEGIES.md  close_test.rs  crossbeam_workstealing_benchmark.rs  executor_fast_benchmark.rs  generator_benchmark.rs  minimal_executor_benchmark.rs  minimal_mpmc_executor_benchmark.rs  minimal_spsc_executor_benchmark.rs  minimal_ws_executor_benchmark.rs  mpmc_benchmark.rs  mpmc_example.rs  signal_benchmark.rs  signal_waker_benchmark.rs  spsc_benchmark.rs  st3_workstealing_benchmark.rs  timer_wheel.rs  timer_wheel_benchmark.rs  tokio_executor_benchmark.rs  ws_executor_benchmark.rs
crates/bop-mpmc/src/: bits.rs  lib.rs  loom_exports.rs  moody.rs  mpmc.rs  mpsc.rs  mpsc_dynamic.rs  seg_spmc.rs  seg_spsc.rs  seg_spsc_.rs  seg_spsc_2.rs  seg_spsc_dynamic.rs  selector.rs  signal.rs  timer_wheel.rs  utils.rs  waker.rs  waker2.rs
crates/bop-mpmc/tests/: close_functionality_test.rs  mpmc_integration_tests.rs  signal_waker_tests.rs
crates/bop-proto/: Cargo.toml
crates/bop-proto/src/: alloc.rs  appender.rs  header.rs  message.rs
crates/bop-protoc/: Cargo.toml
crates/bop-protoc/src/: fxhash.rs  lib.rs  model.rs  model2.rs
crates/bop-raft/: Cargo.toml  README.md
crates/bop-raft/docs/: plan.md  segmented.md  segmented_plan.md  segmented_quorum_plan.md
crates/bop-raft/examples/: raft_example.rs
crates/bop-raft/src/: aof_state_manager.rs  config.rs  error.rs  lib.rs  log_entry.rs  metrics.rs  observability.rs  server.rs  storage.rs  tests.rs  traits.rs
crates/bop-rs/: Cargo.toml
crates/bop-storage/: CODE_REVIEW.md  Cargo.toml
crates/libsql-sys/: Cargo.toml
crates/macros/: Cargo.toml
crates/maniac/: Cargo.toml  README.md  SLIDES.md
crates/maniac-allocator/: Cargo.toml  README.md
crates/maniac-libsql/: Cargo.toml  SLIDES-OLAP-REPLICATION.md  SLIDES.md
crates/maniac-runtime/: ALERTABLE_WAITS_INTEGRATION.md  ASYNC_NETWORKING_SUMMARY.md  Cargo.toml  EVENTLOOP_INTEGRATION_DESIGN.md  EVENTLOOP_INTEGRATION_PROGRESS.md  GENERATOR_RUN_MODES.md  NON_COOPERATIVE_PREEMPTION_WINDOWS.md  PREEMPTED_TASK_SCHEDULING.md  PREEMPTION_COMPLETE.md  PREEMPTION_THREADING_MODEL.md  README.md  UNIX_PREEMPTION_FLOW.md  test_output.txt
crates/maniac-storage/: AOF_COMPLETE.md  Cargo.toml  README.md
crates/maniac-sys/: Cargo.toml  README.md
crates/maniac-usockets/: Cargo.toml  README.md
crates/nuraft/: Cargo.toml  README.md
crates/raft/: Cargo.toml
crates/sanakirja/: Cargo.toml
crates/sanakirja-core/: Cargo.toml
crates/vertx-cluster/: ARCHITECTURE.md  Cargo.toml  README.md
crates/wasmtime/: Cargo.toml
moon/rapp/: Cargo.toml
rust/bop-proto/: Cargo.toml
rust/bop-protoc/: Cargo.toml
rust/bop-rs/: Cargo.toml  FINAL_AOF_TEST_STATUS.md  USOCKETS_TEST_PLAN.md  testfile.tmp
rust/vertx-cluster/: Cargo.toml  README.md
(+2282 files in other folders)
