[workspace]
members = [
    "crates/bop-sys",
    "crates/bop-allocator",
    "crates/bop-aof",
    "crates/bop-mdbx",
    "crates/bop-mpmc",
    "crates/bop-raft",
    "crates/bop-rs",
    "crates/bop-usockets",
    "crates/vertx-cluster",
]
resolver = "2"

[workspace.package]
edition = "2024"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true


