[package]
name = "bop-aof"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = { workspace = true }
byteorder = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
crc64fast-nvme = { workspace = true }
crossbeam = { workspace = true }
futures = { workspace = true }
hdrhistogram = { workspace = true }
libc = { workspace = true }
memmap2 = { workspace = true }
minio = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "sync",
    "macros",
    "signal"
] }
tokio-util = { workspace = true }
tracing = { workspace = true, features = ["std"] }
zstd = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "aof_benchmarks"
harness = false

[lib]
doctest = false
