[package]
name = "bop-executor"
edition = "2024"
version.workspace = true

[dependencies]
core_affinity = "0.8"
crossbeam = { workspace = true }
crossbeam-deque = "0.8"
crossbeam-epoch = "0.9"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
dashmap = "6.1"
futures-lite = "2.6"
generator = "0.8"
rand = { workspace = true }
