[package]
name = "bop-mdbx"
version = "0.1.0"
edition = "2024"

[dependencies]
bop-sys = { workspace = true }
bitflags = { workspace = true }
libmdbx = "0.6.3"
diatomic-waker = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
heed = "0.22"
diatomic-waker = "0.2"

[[example]]
name = "sync_durable"
harness = false
