[package]
name = "bop-mpmc"
version = "0.1.0"
edition = "2024"

[features]
default = []
loom = []

[dependencies]
async-task = "4.7"
maniac-allocator = { workspace = true }
maniac-sys = { workspace = true }
crossbeam = { workspace = true }
crossbeam-deque = "0.8"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
crossfire = "2.1.6"
dashmap = "6.1"
futures-core = "0.3"
futures-lite = "2.6"
hashbrown = "0.16"
thiserror = { workspace = true }
rand = { workspace = true }
core_affinity = "0.8.3"
st3 = "0.4"

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[dev-dependencies]
maniac-allocator = { workspace = true }
tokio = { version = "1", features = ["full"] }
num_cpus = "1.17"
generator = "0.8"
core_affinity = "0.8.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(ignore_leaks)'] }

[[example]]
name = "generator_benchmark"
path = "examples/generator_benchmark.rs"

[[example]]
name = "minimal_spsc_executor_benchmark"
path = "examples/minimal_spsc_executor_benchmark.rs"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"
waker-fn = "1.1"

# [[build]]
# rustflags = ["-A", "warnings"]
