[package]
name = "bop-runtime"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]


[dev-dependencies]
rand = { workspace = true }
criterion = { workspace = true }
proc-macro2 = { workspace = true }

#[[bench]]
#name = "art_bench"
#path = "benches/art_bench.rs"
#harness = false

#[profile.release]
#opt-level = 'z'
#lto = true
#strip = true
#panic = "abort"
