[package]
name = "bop-compiler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bopc"
path = "src/main.rs"

[lib]
name = "libbopc"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
rlsf = { workspace = true }
futures = { workspace = true }
proc-macro2 = { workspace = true }
allocator-api2 = { workspace = true }
#ghost-cell = { workspace = true }
bumpalo = { workspace = true }

[target.'cfg(target_os = "wasi")'.dependencies]
rlsf = { workspace = true }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
snmalloc-rs = { workspace = true }

#[profile.release]
#opt-level = 2
#lto = true
#strip = true
#panic = "abort"
