[package]
name = "bop-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
alloc-stats = ["bop-allocator/alloc-stats"]
usockets-udp = ["bop-usockets/usockets-udp"]

[dependencies]
bop-allocator = { workspace = true, default-features = false }
bop-aof = { workspace = true }
bop-mdbx = { workspace = true }
bop-mpmc = { workspace = true }
bop-raft = { workspace = true }
bop-usockets = { workspace = true, default-features = false }

[dev-dependencies]
bop-sys = { workspace = true }

