[package]
name = 'bop-storage'
edition = '2024'
version = '0.1.0'

[features]
default = ['aof', 'standard']
aof = []
standard = []
libsql = ['dep:libsql-ffi']

[dependencies]
heed = '0.22'
thiserror = { workspace = true }
byteorder = '1.5'
roaring = '0.11'
smallvec = '1.13'
serde = { workspace = true }
crc64fast-nvme = { workspace = true }
bincode = '2.0'
generator = '0.8'
tokio = { version = '1.47', features = ['rt-multi-thread', 'sync', 'time'] }
crossfire = '2.1'
# bop-allocator = { workspace = true }
bop-mpmc = { workspace = true }
snmalloc-rs = "0.3.8"
libsql-ffi = { version = '0.9.24', optional = true, default-features = false }
bytemuck = { version = '1.15', features = ['derive'] }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = '0.61.0', features = ['Win32_Foundation', 'Win32_Storage_FileSystem'] }
