[package]
name = "maniac-libsql-sys"
version = "3.45.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native bindings to libSQL"
keywords = ["libsql", "sqlite", "ffi", "bindings", "database"]
categories = ["external-ffi-bindings"]

[dependencies]
bytes = "1.5.0"
maniac-libsql-ffi = { workspace = true }
once_cell = "1.18.0"
maniac-rusqlite = { workspace = true, features = ["trace"], optional = true }
tracing = "0.1.37"
zerocopy = { version = "0.7.28", features = ["derive"] }

[features]
default = ["api"]
api = ["wal"]
wal = []
rusqlite = ["dep:maniac-rusqlite"]
wasmtime-bindings = ["maniac-libsql-ffi/wasmtime-bindings"]
unix-excl-vfs = []
encryption = ["maniac-libsql-ffi/multiple-ciphers"]
sqlean-extension-uuid = ["maniac-libsql-ffi/sqlean-extension-uuid"]
sqlean-extension-crypto = ["maniac-libsql-ffi/sqlean-extension-crypto"]
sqlean-extension-fuzzy = ["maniac-libsql-ffi/sqlean-extension-fuzzy"]
sqlean-extension-math = ["maniac-libsql-ffi/sqlean-extension-math"]
sqlean-extension-stats = ["maniac-libsql-ffi/sqlean-extension-stats"]
sqlean-extension-text = ["maniac-libsql-ffi/sqlean-extension-text"]
sqlean-extension-regexp = ["maniac-libsql-ffi/sqlean-extension-regexp"]
sqlean-extensions = ["maniac-libsql-ffi/sqlean-extensions"]
