[package]
authors = []
categories = ["asynchronous"]
description = "Maniac proc macros."
edition = "2024"
keywords = ["runtime", "iouring", "async"]
license = "MIT OR Apache-2.0"
name = "maniac-macros"
readme = "README.md"
repository = "https://github.com/bisque-io/bop"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1"
syn = { version = "2.0", features = ["full"] }
