[package]
name = "maniac-libsql"
version = "0.1.0"
edition = "2024"

[features]
default = []
maniac-runtime = []
rusqlite = ["maniac-libsql-sys/rusqlite"]

[dependencies]
congee = "0.4.1"
libmdbx = "0.6"
bytemuck = "1.16"
uuid = { version = "1.4", features = ["v4"] }
thiserror = "2.0"
anyhow = "1.0"
crc = "3.4.0"
crc64fast-nvme = "1.2"
dashmap = "6.1"
lz4_flex = "0.12"
maniac = { path = "../maniac" }
maniac-libsql-ffi = { path = "../libsql-ffi" }
maniac-libsql-sys = { path = "../libsql-sys" }

[dev-dependencies]
tempfile = "3.8"
