[package]
name = 'maniac-storage'
edition = '2024'
version = '0.1.0'

[features]
default = ['aof', 'standard']
aof = []
standard = []
libsql = ['dep:libsql-ffi']

[dependencies]
heed = '0.22'
thiserror = { workspace = true }
byteorder = '1.5'
roaring = '0.11'
smallvec = '1.13'
serde = { workspace = true }
crc64fast-nvme = { workspace = true }
bincode = { version = '2.0', features = ['serde'] }
generator = '0.8'
crossfire = '2.1'
maniac-allocator = { workspace = true }
#snmalloc-rs = "0.3.8"
libsql-ffi = { version = '0.9.24', optional = true, default-features = false }
bytemuck = { version = '1.15', features = ['derive'] }
dashmap = { version = '6.1' }
tokio = { version = '1.47', features = ['rt-multi-thread', 'sync', 'time', 'fs', 'io-util', 'macros'] }
tokio-util = '0.7'
uuid = { version = '1.10', features = ['serde', 'v4'] }
rust-s3 = { version = '0.37', features = ['tokio-rustls-tls'], default-features = false }
bytes = '1.10'
zstd = "0.13"
tracing = { workspace = true }

[dev-dependencies]
maniac-allocator = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = '0.61.0', features = ['Win32_Foundation', 'Win32_Storage_FileSystem'] }

