[package]
name = "maniac"
version = "0.1.0"
edition = "2024"
authors = ["BOP Team"]
description = "Massively scalable Rust async runtime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bisque-io/bop"

[dependencies]
# Local dependencies
maniac-allocator = { workspace = true }
maniac-sys = { workspace = true }
maniac-storage = { workspace = true }
maniac-usockets = { workspace = true }
maniac-executor = { workspace = true }

# Serialization and data handling
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
byteorder = { workspace = true }

# Networking dependencies
# compio = { workspace = true }
# compio-tls = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
rustls = { workspace = true, features = ["aws-lc-rs", "std"] }
aws-lc-rs = { workspace = true }
rustls-pemfile = { workspace = true }
log = { workspace = true }

#[features]
#default = []
## Enable async clustering support
#async = ["tokio"]
## Enable Raft consensus backend
#raft = ["openraft"]

[[bin]]
name = "vertx-cluster"
path = "src/main.rs"

[dev-dependencies]
tokio-test = { workspace = true }
