[package]
name = "maniac"
edition = "2024"
version = "0.1.0"
authors = ["Maniac Team"]
description = "High-performance async runtime with M:N threading and stackful coroutines"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bisque-io/bop"
keywords = ["async", "runtime", "coroutines", "green-threads", "m-n"]
categories = ["asynchronous", "concurrency"]

[features]
# Enable mio by default for the usockets port; we rely on it for portable polling.
# Added monoio features for compatibility with vendored code
default = [
    "std",
    "race",
    "mio",
    "iouring",
    "poll",
    "bytes",
    "utils",
    "async-cancel",
    "tls-rustls",
    "hyper-compat",
    "tokio-compat",
    "tracing",
    "unlinkat",
    "renameat",
    "symlinkat",
    "zero-copy",
]
raft = ["dep:maniac-raft"]
std = []
race = []
timers-introspection = []
standard = []
mio = ["dep:mio"]
iouring = ["dep:io-uring"]

# Monoio ported features
poll = ["mio"]
bytes = ["dep:bytes"]
poll-io = ["poll"] # needs mio
zero-copy = []
splice = []
mkdirat = []
unlinkat = []
renameat = []
symlinkat = []
signal = []
utils = ["nix"]
unsafe_io = []
async-cancel = []
tracing = ["dep:tracing"]
debug = ["dep:tracing"] # enable debug tracing
nix = ["dep:nix"]
unstable = [] # enable unstable Rust features from monoio
tokio-compat = [
    "dep:tokio",
    "dep:reusable-box-future",
] # enable tokio AsyncRead/AsyncWrite compatibility  
hyper-compat = [
    "dep:hyper",
    "poll-io",
    "tokio-compat",
] # enable hyper compatibility
tls-rustls = ["dep:rustls"] # enable rustls TLS support
tls-native = ["dep:native-tls"] # enable native-tls support
tls-unsafe-io = [
] # enable unsafe zero-copy I/O for TLS (requires careful lifetime management)
track-allocations = [] # internal feature for testing zero-allocation

[dependencies]
anyerror = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
arc-swap = { workspace = true }
auto-const-array = { workspace = true }
aws-lc-rs = { workspace = true }
bytes = { workspace = true, optional = true }
byte-unit = { workspace = true, optional = true }
cfg-if = { workspace = true }
chrono = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
core_affinity = { workspace = true }
crossbeam = { workspace = true }
crossbeam-epoch = { workspace = true }
crossbeam-utils = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
flume = { workspace = true }
futures-lite = { workspace = true }
futures = { workspace = true }
futures-io = { workspace = true }
hyper = { workspace = true, optional = true }
libc = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
pin-project-lite = { workspace = true }
pollster = { workspace = true }
rand = { workspace = true }
memchr = { workspace = true }
mio = { workspace = true, optional = true, features = [
    "os-poll",
    "net",
    "os-ext",
] }
native-tls = { workspace = true, optional = true }
nix = { workspace = true, features = ["sched"], optional = true }
reusable-box-future = { workspace = true, optional = true }
rustc-hash = { workspace = true }
rustls = { workspace = true, features = ["std", "aws_lc_rs"], optional = true }
rustls-webpki = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-native-certs = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
socket2 = { workspace = true, features = ["all"] }
thiserror = { workspace = true }
tokio = { workspace = true, default-features = false, features = [
    "io-util",
], optional = true }
tracing = { workspace = true, optional = true }
webpki-roots = { workspace = true }

maniac-raft-macros = { path = "../raft-macros", version = "0.10.0", optional = true }
maniac-raft = { path = "../raft", version = "0.10.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Kernel",
    "Win32_System_Console",
] }

[dev-dependencies]
loom = { workspace = true }
tokio = { workspace = true, features = ["full", "io-util"] }
criterion = { workspace = true }
pollster = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(loom)',
    'cfg(diatomic_waker_loom)',
    'cfg(multishot_loom)',
    'cfg(async_event_loom)',
] }
# unexpected_cfgs = { level = "warn", check-cfg = ['cfg(diatomic_waker_loom)'] }
unsafe_op_in_unsafe_fn = "allow"
unused_unsafe = "allow"

[[bench]]
name = "signal_waker_perf"
harness = false
