[package]
name = "nuraft"
version = "0.1.0"
edition = "2024"

[features]
default = []
mdbx = []
serde = ["dep:serde", "dep:serde_json"]
tracing = ["dep:tracing"]

[dependencies]
maniac-sys = { workspace = true }
maniac-storage = { workspace = true }
crc64fast-nvme = { workspace = true }
crc32fast = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true, default-features = false, features = ["std"], optional = true }

[dev-dependencies]
tempfile = { workspace = true }


